feat: removed some useless code